<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_big_16dp">

        <ImageView
            android:src="@drawable/ic_editor_judul_pa"
            style="@style/image_all_editor_view"/>

        <TextView
            android:layout_marginStart="@dimen/dimen_small_4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pilih_dosen"
            android:textSize="@dimen/text_size_title_small_18sp"
            android:textColor="@color/colorPrimary"/>

        <Spinner
            android:id="@+id/act_koor_judul_pa_spinner_nama_dosen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_small_4dp"
            android:layout_marginBottom="@dimen/dimen_small_4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_small_4dp"
            android:text="@string/text_judul_proyek_akhir"
            android:textSize="@dimen/text_size_title_small_18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_koor_judul_pa_edittext_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginBottom="@dimen/dimen_big_16dp"
            android:hint="@string/hint_masukkan_judul_pa"/>
        <TextView
            android:layout_marginStart="@dimen/dimen_small_4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_kategori_proyek_akhir"
            android:textSize="@dimen/text_size_title_small_18sp"
            android:textColor="@color/colorPrimary"/>

        <Spinner
            android:id="@+id/act_koor_judul_pa_spinner_kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_small_4dp"
            android:layout_marginBottom="@dimen/dimen_small_4dp"/>

        <TextView
            android:layout_marginStart="@dimen/dimen_small_4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_deskripsi_proyek_akhir"
            android:textSize="@dimen/text_size_title_small_18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_koor_judul_pa_edittext_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/hint_masukkan_deskripsi_judul_pa"/>

        <Button
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/act_koor_judul_pa_button_simpan"
            android:layout_marginTop="@dimen/dimen_big_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_tambah_judul"
            android:textColor="@color/colorTextWhite"
            android:background="@drawable/box_border_button_primary"/>

    </LinearLayout>
</ScrollView>