<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".fragments.KoorJudulSubdosenFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner_dosen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginStart="@dimen/dimen_medium"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@id/spinner_dosen"
            android:id="@+id/frg_koor_judul_dsn_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dimen_medium"
            tools:listitem="@layout/content_item_koor_judulpa">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/frg_koor_judul_dsn_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/dimen_big"
            android:src="@drawable/ic_fab_add"/>

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progressbar_list"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>