<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/frg_koor_info_home_swiperefresh"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Empty View -->
        <include layout="@layout/content_list_all_is_empty"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frg_koor_info_home_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_medium_8dp"
            tools:listitem="@layout/content_list_all_informasi"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/frg_koor_info_home_fab"
            style="@style/fab_all_add"/>


    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>