...
            android:textColor="@color/colorTextBlack"
            android:layout_marginStart="@dimen/dimen_small_4dp"
            android:text="@string/menu_kategori_monev" />

        <EditText
            android:textSize="@dimen/text_size_medium_16sp"
            android:id="@+id/dialog_kategori_monev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_medium_8dp"
            android:hint="@string/hint_masukkan_kategori_monev"/>

        <TextView
...
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextBlack"
            android:text="@string/text_minimal_jumlah_bimbingan" />

        <EditText
            android:textSize="@dimen/text_size_medium_16sp"
            android:id="@+id/dialog_jumlah_bimbingan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/hint_masukkan_minimal_jumlah_bimbingan" />

...
