<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <!-- Empty View -->
    <include layout="@layout/content_list_all_is_empty"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frg_koor_kategori_monev_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/dimen_medium_8dp"
        tools:listitem="@layout/content_list_koor_kategori_monev">
    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/frg_koor_kategori_monev_fab"
        style="@style/fab_all_add"/>

</RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>